プロンプトの修正とkiyoshiの追加ナリ！

--- a/templates/index.html
+++ b/templates/index.html
@@ -296,6 +296,9 @@
                 <option value="888753765">怒り・悲しみ</option>
             </optgroup>
             -->
+            <optgroup label="kiyoshi">
+                <option value="1763602272">ノーマル</option>
+            </optgroup>
             <optgroup label="sakuragi">
                 <option value="269244800">ノーマル</option>
             </optgroup>
